// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have only high contrast styles for p-carousel 1`] = `
[
  {
    ".bullet": {
      "background": "CanvasText",
    },
  },
]
`;

exports[`should have only high contrast styles for p-divider 1`] = `
[
  {
    "hr": {
      "background": "CanvasText",
    },
  },
]
`;

exports[`should have only high contrast styles for p-popover 1`] = `
[
  {
    "button:focus::before": {
      "border-color": "Highlight",
    },
  },
]
`;

exports[`should have only high contrast styles for p-scroller 1`] = `
[
  {
    ".scroll-wrapper:focus::before": {
      "border-color": "Highlight",
    },
  },
]
`;

exports[`should have only high contrast styles for p-segmented-control-item 1`] = `
[
  {
    "button:focus::before": {
      "border-color": "Highlight",
    },
  },
]
`;

exports[`should have only high contrast styles for p-spinner 1`] = `
[
  {
    "circle:last-child": {
      "stroke": "Canvas",
    },
  },
  {
    "circle:first-child": {
      "stroke": "CanvasText",
    },
  },
]
`;

exports[`should have only high contrast styles for p-switch 1`] = `
[
  {
    ".toggle": {
      "background-color": "CanvasText",
    },
  },
]
`;

exports[`should have only high contrast styles for p-tabs-bar 1`] = `
[
  {
    ".bar": {
      "background": "CanvasText",
    },
  },
]
`;

exports[`should have only high contrast styles for p-wordmark 1`] = `
[
  {
    "svg": {
      "fill": "CanvasText",
    },
  },
]
`;
